--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 {% set inlineJs %}
-        {% include "scripts/inline-critical.js" %}
+{% include "scripts/inline-critical.js" %}
 {% endset %}
 <!DOCTYPE html>
 <html data-theme="light" lang="en">
@@ -10,29 +10,23 @@
         {% include 'partials/meta.html' %}
         <!-- todo learn about feeds -->
         <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-        <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
-
-
-        <!-- todo preload right fonts, can we do this magically? -->
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-400-latin5.woff2" crossorigin="anonymous" />
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" crossorigin="anonymous" />
+        <link
+        rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}"> <!-- todo preload right fonts, can we do this magically? -->
+        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-400-latin5.woff2" crossorigin="anonymous"/>
+        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" crossorigin="anonymous"/>
         <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2" crossorigin="anonymous"/>
         {%- if enableAds %}
             {# <script data-ad-client="ca-pub-6191883311533680" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> #}
         {% endif %}
         <style>
-            {% include "fonts/fonts.css" %}
-        </style>
+            {% include "fonts/fonts.css" %}</style>
         <style>
-            {% include "css/critical.css" %}
-        </style>
-
+            {% include "css/critical.css" %}</style>
         {# Add facility for pages to delare an array of critical styles #}
         {% if pageCriticalStyles %}
             {% for item in pageCriticalStyles %}
                 <style>
-                    {% include item %}
-                </style>
+                    {% include item %}</style>
             {% endfor %}
         {% endif %}
     </head>
@@ -40,31 +34,30 @@
         {% set skipLinkAnchor = "#main-content" %}
     {% endif %}
     <body>
-        <a class="skip-link call-to-action" href="{{skipLinkAnchor}}">Skip to content</a>
+        <a class="skip-link call-to-action" href="{{ skipLinkAnchor }}">Skip to content</a>
         <div class="site-wrap">
             <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
-            <div class="wrapper page-layout anim-bg {{containerClass}}">
-            {# Deliberate to not break sibling selector and run before themed code #}
-            <script>
-                {{ inlineJs | jsmin | safe }}
-            </script>  
-            {% include "partials/header.html" %}
+            <div
+                class="wrapper page-layout anim-bg {{ containerClass }}">
+                {# Deliberate to not break sibling selector and run before themed code #}
+                <script>
+                    {{ inlineJs | jsmin | safe }}</script>
+                {% include "partials/header.html" %}
                 {% include "partials/actionbar.html" %}
-                <main id="main-content">
-                    <intersect-detect class="main-content">
-                        {% block content %}{% endblock %}
-                    </intersect-detect>
-                    <div class="footer-wrap">
-                        <footer>
-                            {% block footer %}{% endblock %}
-                            {% include 'partials/copyright.html' %}
-                        </footer>
-                    </div>
-                </main>
+                <main id="main-content" class="{% if nav !== false %}with-nav{% endif %}">
+                    <intersect-detect class="main-content"> {% block content %}{% endblock %}
+                        </intersect-detect>
+                        <div class="footer-wrap">
+                            <footer>
+                                {% block footer %}{% endblock %}
+                                {% include 'partials/copyright.html' %}
+                            </footer>
+                        </div>
+                    </main>
+                </div>
+                <div class="filler"></div>
             </div>
-            <div class="filler"></div>
-        </div>
-        <!-- TODO  split  js into pages -->
-        <script src="{{ assets.getPath("index.js")}}" type="module"></script>
-    </body>
-</html>
+            <!-- TODO  split  js into pages -->
+            <script src="{{ assets.getPath("index.js") }}" type="module"></script>
+        </body>
+    </html>
