--- a/src/_includes/partials/actionbar.html
+++ b/src/_includes/partials/actionbar.html
@@ -1,16 +1,29 @@
+{%- if nav !== false %}
 <nav aria-label="Main" class="actionbar">
-    <ul class="actions">
-        {%- for entry in collections.all | eleventyNavigation %}
-        <li class="action{% if entry.url == page.url %} action-active{% endif %}"><a href="{{ entry.url | url }}">
-            {% include entry.image %}
-            <span>{{ entry.title }}</span>
-        </a></li>
-        {%- endfor %}
-        {%- for link in external.links %}
-            <li><a rel="noopener" target="_blank" href="{{link.url | url}}" class="action external">{% include link.icon %}<span>{{link.text}}</span></a></li>
-        {%- endfor %}
-        <li class="toggle-li">
-            <div class="theme-toggle toggle-desktop">{% include "./toggle.html" %}</div>
-        </li>
-    </ul>
+  <ul class="actions">
+    {%- for entry in collections.all | eleventyNavigation %}
+    <li class="action{% if entry.url == page.url %} action-active{% endif %}">
+      <a href="{{ entry.url | url }}">
+        {% include entry.image %}
+        <span>{{ entry.title }}</span>
+      </a>
+    </li>
+    {%- endfor %} {%- for link in external.links %}
+    <li>
+      <a
+        rel="noopener"
+        target="_blank"
+        href="{{link.url | url}}"
+        class="action external"
+        >{% include link.icon %}<span>{{link.text}}</span></a
+      >
+    </li>
+    {%- endfor %}
+    <li class="toggle-li">
+      <div class="theme-toggle toggle-desktop">
+        {% include "./toggle.html" %}
+      </div>
+    </li>
+  </ul>
 </nav>
+{%- endif -%}
