--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,23 +1,24 @@
 .logo {
-    margin-left: 1rem;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    svg {
-        height: 80%;
-        width: auto;
-        max-width: 100%;
-    }
+  margin-left: 1rem;
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+  svg {
+    height: 80%;
+    width: auto;
+    max-width: 100%;
+  }
 }
 
 .micro-hero {
-    display: inline-flex;
-    max-height: 100%;
-    max-width: 45px;
-    margin-left: 0.5rem;
-    svg {
-        height: 100%;
-        width: 100%;
-    }
+  display: inline-flex;
+  max-height: 100%;
+  max-width: 45px;
+  margin-left: 0.5rem;
+  svg {
+    height: 100%;
+    width: 100%;
+  }
 }
