--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -1,4 +1,3 @@
-
 @import "../colors";
 $card-padding: 2rem;
 
@@ -7,82 +6,86 @@ $card-padding: 2rem;
   border-radius: 3px;
   transition: transform 250ms ease-out;
   overflow: hidden;
-  width: 100%;  
+  width: 100%;
   z-index: 1;
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     transform: scale(0.98) translateY(0.3rem);
   }
 
+  &.no-transition {
+    transform: none;
+  }
 
   .post-tags {
-    flex:1;
+    flex: 1;
     position: relative;
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
-    margin:1rem 0;
-
+    margin: 1rem 0;
   }
-    .post-title-link {
-        min-height: 7rem;
-        position: relative;
-        > div {
-          display: flex;
-          flex-direction: column;
-          height: 100%;
-        }
-       .post-heading {
-        font-weight: 600;
-        width: 100%;
-        font-size: 1.25rem;
-       }
-       .tagline {
-         margin:0.5rem 0;
-         font-size: 0.95rem;
-       }
-    }
-    --post-card-height: auto;
-    --post-card-width: 27rem;
-    min-width: 260px;
-    max-width: 1000px;
-    background: var(--Secondary);
-    display: flex;
-    flex-direction: column;
-    .post-img-link {
-      .post-img {
-        height: 14rem;
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-
-        img, svg {
-          -o-object-fit: cover;
-          object-fit: cover;
-          object-position: top;
-          -o-object-position: top;
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          position: absolute;
-          background: var(--Primary50);
-        }
-
-        svg {
-          width: auto;
-          height: auto;
-        }
-      }
-    }
-
-    .post-card-content {
-      padding:$card-padding;
+  .post-title-link {
+    min-height: 7rem;
+    position: relative;
+    > div {
       display: flex;
       flex-direction: column;
-      flex: 1;
+      height: 100%;
     }
+    .post-heading {
+      font-weight: 600;
+      width: 100%;
+      font-size: 1.25rem;
+    }
+    .tagline {
+      margin: 0.5rem 0;
+      font-size: 0.95rem;
+    }
+  }
+  --post-card-height: auto;
+  --post-card-width: 27rem;
+  min-width: 260px;
+  max-width: 1000px;
+  background: var(--Secondary);
+  display: flex;
+  flex-direction: column;
+  .post-img-link {
+    .post-img {
+      height: 14rem;
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+
+      img,
+      svg {
+        -o-object-fit: cover;
+        object-fit: cover;
+        object-position: top;
+        -o-object-position: top;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        background: var(--Primary50);
+      }
+
+      svg {
+        width: auto;
+        height: auto;
+      }
+    }
+  }
+
+  .post-card-content {
+    padding: $card-padding;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
 }
 
 .post-bottom {
@@ -91,8 +94,8 @@ $card-padding: 2rem;
   &::before {
     content: "";
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 0.15rem;
     width: 100%;
     background: var(--Background);
@@ -100,7 +103,7 @@ $card-padding: 2rem;
 
   svg {
     width: auto;
-    height:100%;
+    height: 100%;
     max-height: 2rem;
     fill: currentColor;
   }
@@ -120,7 +123,8 @@ $card-padding: 2rem;
       align-items: center;
     }
     a {
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         color: var(--Primary);
       }
     }
@@ -130,14 +134,14 @@ $card-padding: 2rem;
     flex-direction: column;
     font-size: 0.75rem;
     text-transform: uppercase;
-    gap:0.2rem;
+    gap: 0.2rem;
   }
 }
 
 .post-series {
   font-size: var(--font-size-small);
   font-weight: 600;
-  margin-top:0.5rem;
+  margin-top: 0.5rem;
   flex: 1;
   display: flex;
   align-items: flex-end;
@@ -147,7 +151,7 @@ $card-padding: 2rem;
 }
 
 .post-card .series-info {
-  right:1rem;
+  right: 1rem;
 }
 
 .first-card {
@@ -164,7 +168,8 @@ $card-padding: 2rem;
   a {
     margin-top: 1rem;
     color: var(--Primary50);
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: var(--Text);
     }
   }
@@ -186,14 +191,14 @@ $card-padding: 2rem;
     gap: 1rem;
     .social-card-link {
       color: var(--Text);
-      &:hover, &:focus {
-          color: var(--Primary);
+      &:hover,
+      &:focus {
+        color: var(--Primary);
       }
       svg {
         fill: currentColor;
         height: 2rem;
         width: auto;
-       
       }
     }
   }
