--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -1,98 +1,105 @@
-@import 'reset';
-@import 'colors';
+@import "reset";
+@import "colors";
 
-html, body {
-    font-family: "Nunito", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
+html,
+body {
+  font-family: "Nunito", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 /* disable overscrolling for non-touch devices */
 @media (hover: hover) {
-    html,body {
-        overscroll-behavior: none;
-    }
+  html,
+  body {
+    overscroll-behavior: none;
+  }
+}
+
+.main-content {
+  flex: 1;
 }
 
 a {
-    color: var(--Text);
-    text-decoration: none;
+  color: var(--Text);
+  text-decoration: none;
 }
 
 .site-wrap {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .filler {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background: var(--Background);
-    z-index: -1000;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: var(--Background);
+  z-index: -1000;
 }
 
 .wrapper {
-    display: flex;
-    flex:1;
-    flex-direction: column;
-    color: var(--Text);
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  color: var(--Text);
 }
 
 footer {
-    .post-tiles {
-        margin-top:2rem;
-    }
+  .post-tiles {
+    margin-top: 2rem;
+  }
 
-    h3 {
-        margin-bottom: 2rem;
-    }
+  h3 {
+    margin-bottom: 2rem;
+  }
 
-    .sharing {
-        .social-share {
-            margin: 1rem 0;
-        }
+  .sharing {
+    .social-share {
+      margin: 1rem 0;
     }
+  }
 }
 
 .copyright {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-size: var(--font-size-small);
-    vertical-align: middle;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-size: var(--font-size-small);
+  vertical-align: middle;
 }
 
 .skip-link {
-    position: absolute;
-    top:0;
-    right:0;
-    z-index: 99;
-    margin-top:1.5rem;
-    &:not(:focus) {
-        @extend .visually-hidden;
-    }
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 99;
+  margin-top: 1.5rem;
+  &:not(:focus) {
+    @extend .visually-hidden;
+  }
 }
 
 .kofi {
-    img {
-        height: 2rem !important;
-        width: auto !important;
-        background-image: none !important;
-    }
+  img {
+    height: 2rem !important;
+    width: auto !important;
+    background-image: none !important;
+  }
 }
 
 .something-wrong {
-    margin:0.5rem 0;
-    text-align: center;
-    font-size: var(--font-size-small);
-    a {
-        color: var(--PrimaryText);
-    }
+  margin: 0.5rem 0;
+  text-align: center;
+  font-size: var(--font-size-small);
+  a {
+    color: var(--PrimaryText);
+  }
 }
 
 griff-loader {
-    --loader-color: var(--Primary);
+  --loader-color: var(--Primary);
 }
 
 /* Utilities */
@@ -116,5 +123,3 @@ griff-loader {
 @import "./components/author";
 @import "./components/breadcrumb";
 @include backHeros(".anim-bg");
-
-
