--- a/src/_includes/layouts/copy-component.njk
+++ b/src/_includes/layouts/copy-component.njk
@@ -12,7 +12,9 @@
         {% include "partials/demo-card.html" %}
         <div class="post-wrap">
             <article class="post content">
-                {{ content | safe }}
+                <section class="post-content">
+                    {{ content | safe }}
+                </section>
             </article>
         </div>
     </div>
