fix mobile and update copy component

--- a/src/_includes/layouts/copy-component.njk
+++ b/src/_includes/layouts/copy-component.njk
@@ -10,8 +10,10 @@
     <div class="card-wrapper">
         <h1>Add a copy button to any HTML</h1>
         {% include "partials/demo-card.html" %}
-        <div class="post-wrap">
-            <article class="post content">
+    </div>
+    <div class="post-wrap">
+        <div class="post content">
+            <article id="#article-content">
                 <section class="post-content">
                     {{ content | safe }}
                 </section>
