add job history to me page

--- a/src/_includes/partials/card-type-banner.html
+++ b/src/_includes/partials/card-type-banner.html
@@ -1,14 +1,13 @@
-{%- if projectType %}
-{%- set projectIcon = "img/project.svg" -%}
-{%- if projectType === "experiment" %}
-    {%- set projectIcon = "img/experiment.svg" -%}
-{%- endif %}
+{%- if projectType %} {%- set projectIcon = "img/project.svg" -%} {%- if
+projectType === "experiment" %} {%- set projectIcon = "img/experiment.svg" -%}
+{%- endif %} {%- if projectType === "Career" %} {%- set projectIcon =
+"img/job.svg" -%} {%- endif %}
 <div class="post-type-banner">
-    <div class="banner-bg">
-        <div class="post-banner-icon-wrap">
-        <span>{{projectType}}</span>
-        {%- include projectIcon %}  
-        </div>
+  <div class="banner-bg">
+    <div class="post-banner-icon-wrap">
+      <span>{{projectType}}</span>
+      {%- include projectIcon %}
     </div>
+  </div>
 </div>
 {%- endif %}
