--- a/src/_includes/partials/first-card.html
+++ b/src/_includes/partials/first-card.html
@@ -4,7 +4,7 @@
   <p>
     I'm a Senior Frontend Developer and Computer Science graduate currently
     working for an exciting Cybersecurity education company called Immersive
-    labs 🙂.
+    Labs 🙂.
   </p>
   <p>
     In addition to my professional work and blog posts, in my spare time i've
