--- a/src/_includes/partials/project-card.html
+++ b/src/_includes/partials/project-card.html
@@ -70,7 +70,7 @@ fetchGithubRepo %} {% if not codeHero %}
         target="_blank"
       >
         {%- include "img/external.svg" -%}
-        <span>{{project.data.linkText or "Open"}}</span>
+        <span>{{project.data.linkText or "Visit"}}</span>
       </a>
       {%- endif -%}
     </div>
