--- a/src/_includes/partials/first-card.html
+++ b/src/_includes/partials/first-card.html
@@ -7,7 +7,7 @@
     Labs 🙂.
   </p>
   <p>
-    In addition to my professional work and blog posts, in my spare time i've
+    In addition to my professional work and blog posts, in my spare time I've
     worked on some projects and experiments, using various technologies.
   </p>
   <a href="{{firstCard.link.href}}">{{firstCard.link.text}}</a>
