modify site copy

--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -17,10 +17,10 @@
       </a>
    </div>
    {%- set firstCard = {
-   "title": "Some of my ramblings",
+   "title": "Check out my latest posts",
    "link": {
       "href": "/me/",
-      "text": "Check out my projects over here."
+      "text": "See my projects and work history over here."
    }
    }
    -%}
