--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -122,4 +122,5 @@ griff-loader {
 @import "./components/pagination";
 @import "./components/author";
 @import "./components/breadcrumb";
+@import "./components/copy-component";
 @include backHeros(".anim-bg");
