--- a/src/_includes/layouts/copy-component.njk
+++ b/src/_includes/layouts/copy-component.njk
@@ -2,10 +2,10 @@
 {% set pageCriticalStyles = ['css/demos.css'] %}
 {% set nav = false %}
 {% set codeHero %}
-<copy-to-clipboard>
+<copy-component oncopy="this.querySelector('[slot=button]').textContent='Copied'" style="display: block;">
     <pre class="language-bash"><code class="language-bash"><span class="token function">npm</span> <span class="token function">install</span> copy-component</code></pre>
-</copy-to-clipboard>
-{% endset %}
+    <button style="text-transform: uppercase" slot="button">Copy text</button>
+</copy-component>` {% endset %}
 {% block content %}
     <div class="card-wrapper">
         <h1>Add a copy button to any HTML</h1>
