--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,6 +9,9 @@
     </div>
     <div class="post-title">
         <h1 class="text-in thirdin">{{ title }}</h1>
+        {% if subtitle %}
+            <h2 class="text-in thirdin subtitle">{{ subtitle }}</h1>
+        {% endif %}
     </div>
     <div class="post-wrap">
         <div class="post content">
