--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -22,6 +22,7 @@
     flex-direction: column;
     width: 100%;
     justify-content: space-evenly;
+    padding: 0 0.5rem;
     li {
       display: inline-flex;
       justify-content: center;
@@ -78,10 +79,11 @@
       span {
         margin-top: 0.5rem;
       }
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         color: var(--Primary);
         outline: solid 1px var(--Primary);
-        outline-offset: -2px;
+        outline-offset: 3px;
       }
     }
   }
@@ -98,14 +100,14 @@
     top: auto;
     height: $action-bar;
     width: 100%;
-    border-right:none;
+    border-right: none;
     border-top: solid 3px var(--Accent);
 
     .actions {
       display: flex;
       flex-direction: row;
-      margin:0 1rem;
-      padding:0;
+      margin: 0 1rem;
+      padding: 0;
       width: 100%;
 
       li {
