ultra wide margin fix

--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -173,6 +173,9 @@ $tagline-height: 3rem;
   .site-tag {
     margin-top: 10rem;
   }
+  .hero-scroll-down {
+    margin-top: -7rem;
+  }
 }
 
 [observable="hidden"] {
