--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -257,15 +257,18 @@
 }
 
 .grow-diagonal-bottom {
+  opacity: 0;
   animation: growdiagonalbtm 0.7s forwards;
 }
 
 @keyframes growdiagonalbtm {
   0% {
+    opacity: 0;
     clip-path: polygon(0 82%, 0 100%, 14% 100%, 0% 100%);
   }
 
   100% {
+    opacity: 1;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 }
