added post on learning links

--- a/src/_includes/partials/first-card.html
+++ b/src/_includes/partials/first-card.html
@@ -2,7 +2,7 @@
 <li class="first-card">
   <h3>{{firstCard.title}}</h3>
   <p>
-    I'm a Senior Frontend Developer and Computer Science graduate currently
+    I'm a Lead Frontend Developer and Computer Science graduate currently
     working for an exciting Cybersecurity education company called Immersive
     Labs 🙂.
   </p>
