--- a/src/_includes/partials/recommended-posts.html
+++ b/src/_includes/partials/recommended-posts.html
@@ -1,14 +1,11 @@
 {% set recommendedPosts = helpers.getSiblingContent(collections.posts, page) %}
 {% if recommendedPosts %}
 <div class="post-tiles">
-  <h3>You might also like</h3>
+  <h2>You might also like</h2>
   {% set postslist = recommendedPosts %}
   <ul class="tiles">
-    {% for item in postslist %}
-    {% set post = item %}
-    <li class="post-card">
-      {% include "./post-card.html" %}
-    </li>
+    {% for item in postslist %} {% set post = item %}
+    <li class="post-card">{% include "./post-card.html" %}</li>
     {% endfor %}
   </ul>
 </div>
