--- a/src/_includes/partials/cta-heading.html
+++ b/src/_includes/partials/cta-heading.html
@@ -1,10 +1,12 @@
 <h2 class="cta-heading {% if callToAction %}call-to-action-heading {% endif %}">
-    <div class="subtitle">
-        <span>{{subtitle}}</span>
-    </div>
-    {% if callToAction %}
-    <a class="call-to-action call-to-action-absolute" href="{{callToAction.href}}">{{callToAction.text}}</a>
-    {% endif %}
+  <div class="subtitle">
+    <span>{{subtitle}}</span>
+  </div>
+  {% if callToAction %}
+  <a class="call-to-action call-to-action-absolute" href="{{callToAction.href}}"
+    >{{callToAction.text}}</a
+  >
+  {% endif %}
 </h2>
 {%- if subtitleDetail %}
 <div class="subtitle-detail">{{subtitleDetail}}</div>
