updated site links

--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -11,7 +11,7 @@
     {% endif %}
   </div>
   <p id="tagline" class="site-tag">
-    <span class="second-there">Feel free to give me a follow on Twitter
+    <span class="second-there">Feel free to give me a follow on X
       <a style="color: var(--PrimaryText);" target="_blank" rel="noopener" href="{{ metadata.author.twitter_url }}">{{ metadata.author.twitter }}</a>.
     </span>
   </p>
