--- a/src/_includes/partials/actionbar.html
+++ b/src/_includes/partials/actionbar.html
@@ -8,17 +8,18 @@
         <span>{{ entry.title }}</span>
       </a>
     </li>
-    {%- endfor %} {%- for link in external.links %}
-    <li>
-      <a
-        rel="noopener"
-        target="_blank"
-        href="{{link.url | url}}"
-        class="action external"
-        >{% include link.icon %}<span>{{link.text}}</span></a
-      >
-    </li>
     {%- endfor %}
+    <li>
+      <ul class="sublist">
+        {%- for link in external.links %}
+        <li>
+          <a rel="noopener" target="_blank" href="{{link.url | url}}"
+            class="action external{% if link.iconOnly %}visually-hidden icon-only{% endif %}">{% include link.icon
+            %}<span class="{% if link.iconOnly %}visually-hidden{% endif %}">{{link.text}}</span></a>
+        </li>
+        {%- endfor %}
+      </ul>
+    </li>
     <li class="toggle-li">
       <div class="theme-toggle toggle-desktop">
         {% include "./toggle.html" %}
