--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -17,11 +17,12 @@
   border-right: solid 2px var(--Accent);
 
   .actions {
-    margin: 1.15rem 0;
+    margin: $header 0;
+
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: space-evenly;
+    gap: 1rem;
     padding: 0 0.5rem;
     li {
       display: inline-flex;
@@ -89,7 +90,18 @@
   }
 }
 
+.sublist {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
 @media screen and (max-width: 45em) {
+  .sublist {
+    flex-direction: row;
+    width: auto;
+  }
   .action-hide {
     transform: translateY(10rem);
   }
@@ -105,6 +117,7 @@
 
     .actions {
       display: flex;
+      justify-content: center;
       flex-direction: row;
       margin: 0 1rem;
       padding: 0;
@@ -113,6 +126,10 @@
       li {
         display: inline-flex;
         list-style-type: none;
+      }
+
+      .icon-only {
+        padding-bottom: 1rem;
       }
 
       a {
