--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -117,7 +117,7 @@
 
     .actions {
       display: flex;
-      justify-content: center;
+      justify-content: safe center;
       flex-direction: row;
       margin: 0 1rem;
       padding: 0;
