--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -134,7 +134,7 @@
 
       a {
         justify-content: center;
-        width: $action-bar;
+        width: 3.5rem;
         &:after {
           width: 85%;
         }
